# pdd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  pytest.ini
.githooks/: pre-commit
.qwen/: .env.example
docs/: LOOP_ENGINEERING_PROJECT.md  README.md  STATUS.md  endpoint.md  gate.md
orchestrator/: README.md  __init__.py  artifacts.py  cli.py  config.py  doctor.py  driver.py  events.py  graph.py  issues.py  jira.py  killtree.py  menu.py  progress.py  publish.py  queue.py  reaper.py  report.py  router.py  run.py  runner.py  sandbox.py  stages.py  state.py  testrun.py  triage.py  usage.py  verdict.py  worker.py  worktree.py
orchestrator/prompts/: README.md  architect.md  coder.md  intake.md  reviewer.md  tester.md
orchestrator/schemas/: README.md  plan.json  task_meta.json  verdict.json
sandbox/: Dockerfile  README.md  seccomp.json
stubs/: README.md  qwen_stub.py
tests/: README.md  test_cli.py  test_doctor.py  test_driver_stub.py  test_entrypoint.py  test_events.py  test_issue_to_pr_smoke.py  test_issues.py  test_jira.py  test_killtree.py  test_menu.py  test_pipeline_stub.py  test_progress.py  test_prompt_contracts.py  test_publish.py  test_queue.py  test_reaper.py  test_report.py  test_resume_retry.py  test_router.py  test_run_hygiene.py  test_runner.py  test_runner_secrets.py  test_sandbox.py  test_stages.py  test_state.py  test_usage.py  test_verdict.py  test_worker.py  test_worktree.py
tools/: README.md  demo_e2e.py  demo_issue_to_pr.py  probe_limits.py  probe_review.py  probe_sandbox_model.py
(+2 files in other folders)
